force-app/main/default/objects/Opportunity/fields/Interest_Rate__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate__c</fullName>
    <description>Interest rate for the loan</description>
    <label>Interest Rate (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>