force-app/main/default/objects/Opportunity/fields/Loan_UUID__c.field-meta.xml
<CustomField>
    <fullName>Loan_UUID__c</fullName>
    <description>External UUID for Loan/Opportunity integration</description>
    <externalId>true</externalId>
    <label>Loan UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>