force-app/main/default/objects/Opportunity/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <description>Purpose of the loan</description>
    <label>Purpose</label>
    <length>255</length>
    <type>Text</type>
</CustomField>