force-app/main/default/objects/Opportunity/fields/Term__c.field-meta.xml
<CustomField>
    <fullName>Term__c</fullName>
    <description>Loan term in months</description>
    <label>Term (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>